force-app/main/default/objects/Lead/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Cancelled or Lost Partner</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>End User - Agent</fullName>
            </value>
            <value>
                <fullName>End User - Carrier</fullName>
            </value>
            <value>
                <fullName>End User - Reseller</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Master Agent</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Referral Customer</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Soundpath</fullName>
            </value>
            <value>
                <fullName>Sub Agent</fullName>
            </value>
            <value>
                <fullName>Sub-Reseller</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>