force-app/main/default/objects/Lead/fields/activeChannel_gaMedium__c.field-meta.xml
<CustomField>
    <fullName>activeChannel_gaMedium__c</fullName>
    <formula>IF(FIND( &quot;utm_medium&quot;, gaURL__c ) = 0, &#39;&#39;, 
				MID ( gaURL__c, 
      FIND( &quot;utm_medium&quot;, gaURL__c ) + 11 ,
      IF(FIND ( &quot;&amp;&quot;, gaURL__c, FIND( &quot;utm_medium&quot;, gaURL__c ) ) = 0, LEN(gaURL__c) - 11 - FIND( &quot;utm_medium&quot;, gaURL__c ),
									FIND ( &quot;&amp;&quot;, gaURL__c, FIND( &quot;utm_medium&quot;, gaURL__c ) ) - 11 - FIND( &quot;utm_medium&quot;, gaURL__c )
    )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>activeChannel_gaMedium</label>
    <type>Text</type>
</CustomField>