force-app/main/default/objects/Lead/fields/activeChannel_gaTerm__c.field-meta.xml
<CustomField>
    <fullName>activeChannel_gaTerm__c</fullName>
    <formula>IF(FIND( &quot;utm_term&quot;, gaURL__c ) = 0, &apos;&apos;,
MID ( gaURL__c,
FIND( &quot;utm_term&quot;, gaURL__c ) + 13 ,
IF(FIND ( &quot;&amp;&quot;, gaURL__c, FIND( &quot;utm_term&quot;, gaURL__c ) ) = 0, LEN(gaURL__c) - 13 - FIND( &quot;utm_term&quot;, gaURL__c ),
FIND ( &quot;&amp;&quot;, gaURL__c, FIND( &quot;utm_term&quot;, gaURL__c ) ) - 13 - FIND( &quot;utm_term&quot;, gaURL__c )
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>activeChannel_gaTerm</label>
    <type>Text</type>
</CustomField>