force-app/main/default/objects/Lead/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <description>Aging calculation</description>
    <formula>IF(IsConverted,ConvertedDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>