force-app/main/default/objects/Lead/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <description>Audience Type for Marketo</description>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>primary-host</fullName>
            </value>
            <value>
                <fullName>sub-host</fullName>
            </value>
            <value>
                <fullName>trial users</fullName>
            </value>
            <value>
                <fullName>prospects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>