force-app/main/default/objects/Lead/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Name of person to contact for billing concerns.</inlineHelpText>
    <label>Billing Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>