force-app/main/default/objects/Lead/fields/Billing_Email_B__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email_B__c</fullName>
    <description>This holds a copy (made with running a workflow field update upon saving the lead) of the billing email address so it may be mapped to the account or contact (whichever one isn&#39;t being populated currently)</description>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>