force-app/main/default/objects/Lead/fields/Broadcast_Audio_Additional_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Additional_Minutes__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>Amount charged for every additional 30 minutes added per 100 participants.</inlineHelpText>
    <label>Broadcast Audio Additional Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>