force-app/main/default/objects/Lead/fields/Broadcast_Audio_Additional_Participants__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Additional_Participants__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>Amount charged for every additional 100 participants.</inlineHelpText>
    <label>Broadcast Audio Additional Participants</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>