force-app/main/default/objects/Lead/fields/Broadcast_Audio_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Base_Amount__c</fullName>
    <defaultValue>300</defaultValue>
    <inlineHelpText>Base amount charged for 100 participants, 60 minutes.</inlineHelpText>
    <label>Broadcast Audio Base Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>