force-app/main/default/objects/Lead/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>