force-app/main/default/objects/Lead/fields/Canada_Hidden_Email__c.field-meta.xml
<CustomField>
    <fullName>Canada_Hidden_Email__c</fullName>
    <description>This field is populated with the lead&apos;s email until the lead has opted-in to receiving communication.  This is so that sales/marketing do not email the lead and break CASL standards</description>
    <label>Canada Hidden Email</label>
    <type>Email</type>
</CustomField>