force-app/main/default/objects/Lead/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <inlineHelpText>Default value is Direct.  Do not change unless you work in the Partners channel.</inlineHelpText>
    <label>x-Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>End User - Agent</fullName>
            </value>
            <value>
                <fullName>End User - Distributor</fullName>
            </value>
            <value>
                <fullName>End User - Reseller</fullName>
            </value>
            <value>
                <fullName>Marketing Alliance</fullName>
            </value>
            <value>
                <fullName>Master Agent</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Soundpath</fullName>
            </value>
            <value>
                <fullName>Sub Agent</fullName>
            </value>
            <value>
                <fullName>Sub-Reseller</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>