force-app/main/default/objects/Lead/fields/CID__c.field-meta.xml
<CustomField>
    <fullName>CID__c</fullName>
    <label>CID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>