force-app/main/default/objects/Lead/fields/Close_Date_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Conversion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used in Lead Conversion process to update the Opportunity Close date from the standard month end to customized 60 days out.</description>
    <label>Close Date Conversion</label>
    <type>Checkbox</type>
</CustomField>