force-app/main/default/objects/Lead/fields/Collab_UC_Acct_Buying_Stage__c.field-meta.xml
<CustomField>
    <fullName>Collab_UC_Acct_Buying_Stage__c</fullName>
    <label>Collab/UC Acct Buying Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>