force-app/main/default/objects/Lead/fields/Collab_UC_Contact_Grade__c.field-meta.xml
<CustomField>
    <fullName>Collab_UC_Contact_Grade__c</fullName>
    <label>Collab/UC Contact Grade</label>
    <length>18</length>
    <type>Text</type>
</CustomField>