force-app/main/default/objects/Lead/fields/Communication_Line__c.field-meta.xml
<CustomField>
    <fullName>Communication_Line__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Communication Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>