force-app/main/default/objects/Lead/fields/Company_Name_Kana__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Kana__c</fullName>
    <label>Company Name (Kana)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>