force-app/main/default/objects/Lead/fields/Consent_URL__c.field-meta.xml
<CustomField>
    <fullName>Consent_URL__c</fullName>
    <description>COD-1435, Case #872647:  GDPR field with data obtained in Eloqua and passed to Salesforce. Field Mapped to Contact object.</description>
    <label>Consent URL</label>
    <type>Url</type>
</CustomField>