force-app/main/default/objects/Lead/fields/Contact_Attempted_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Attempted_Date__c</fullName>
    <description>The date an Inside Sales User first attempted to contact the Lead</description>
    <inlineHelpText>The date an Inside Sales User first attempted to contact the Lead</inlineHelpText>
    <label>Contact Attempted Date</label>
    <type>DateTime</type>
</CustomField>