force-app/main/default/objects/Lead/fields/Content_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Content_Most_Recent__c</fullName>
    <label>Content Most Recent</label>
    <length>99</length>
    <type>Text</type>
</CustomField>