force-app/main/default/objects/Lead/fields/ContractURL__c.field-meta.xml
<CustomField>
    <fullName>ContractURL__c</fullName>
    <label>ContractURL</label>
    <type>Url</type>
</CustomField>