force-app/main/default/objects/Lead/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <description>The date/time the status of the Lead changes to converted based off the activity of an Inside Sales User</description>
    <inlineHelpText>The date/time the status of the Lead changes to converted based off the activity of an Inside Sales User</inlineHelpText>
    <label>Converted Date</label>
    <type>DateTime</type>
</CustomField>