force-app/main/default/objects/Lead/fields/Converted_from_MQL_for_opty__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_MQL_for_opty__c</fullName>
    <formula>IF(NOT(ISBLANK( MQL_Assignment_Date__c)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted from MQL for opty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>