force-app/main/default/objects/Lead/fields/Converted_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity_ID__c</fullName>
    <formula>ConvertedOpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Opportunity ID</label>
    <type>Text</type>
</CustomField>