force-app/main/default/objects/Lead/fields/Copy_of_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Lead_Status__c</fullName>
    <formula>IF(ISPICKVAL(Status, &quot;Qualified&quot;), &quot;Qualified&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copy of Lead Status</label>
    <type>Text</type>
</CustomField>