force-app/main/default/objects/Lead/fields/Country_Lead_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Lead_Region__c</fullName>
    <label>Country Lead Region</label>
    <length>5</length>
    <type>Text</type>
</CustomField>