force-app/main/default/objects/Lead/fields/Created_by_User_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_by_User_s_Name__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by User&apos;s Name</label>
    <type>Text</type>
</CustomField>