force-app/main/default/objects/Lead/fields/Created_By_User_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_s_Profile__c</fullName>
    <formula>CreatedBy.Profile_Name_Text__c</formula>
    <label>Created By User&apos;s Profile</label>
    <type>Text</type>
</CustomField>