force-app/main/default/objects/Lead/fields/Created_By_User_s_Region__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_s_Region__c</fullName>
    <formula>TEXT(CreatedBy.User_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By User&apos;s Region</label>
    <type>Text</type>
</CustomField>