force-app/main/default/objects/Lead/fields/Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is mapped to the &quot;Created from Lead&quot; check box in the Opportunity. This will be used in a Workflow Rule to modify the default &quot;Close Date&quot; field upon Lead to Opportunity Conversion.</description>
    <label>Created from Lead</label>
    <type>Checkbox</type>
</CustomField>