force-app/main/default/objects/Lead/fields/Customer_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Company_ID__c</fullName>
    <description>ASX Company ID</description>
    <label>Customer Company ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>