force-app/main/default/objects/Lead/fields/Customer_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_User_ID__c</fullName>
    <description>This is the ASX user ID,</description>
    <label>Customer User ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>