force-app/main/default/objects/Lead/fields/Customer_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Customer_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Subscription</description>
    <label>Customer Webinar</label>
    <type>Checkbox</type>
</CustomField>