force-app/main/default/objects/Lead/fields/Date_of_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Opt_in__c</fullName>
    <inlineHelpText>Date this record opted in to receiving CEM (commercial electronic messages) from PGi</inlineHelpText>
    <label>Date of Opt-in</label>
    <type>Date</type>
</CustomField>