force-app/main/default/objects/Lead/fields/Days_Since_Modified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Modified__c</fullName>
    <formula>TODAY()- DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>