force-app/main/default/objects/Lead/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Custom field used to map Lead Description to Opportunity Description. By default, SFDC only maps the Lead Description field to the Contact Description field. This will allow for it to also be mapped to the Opportunity via Lead Mapping. A workflow rule on Lead will update this custom field from the standard Description field.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>