force-app/main/default/objects/Lead/fields/Disqualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Date__c</fullName>
    <description>Set the first time a lead is changed to Disqualified</description>
    <inlineHelpText>Set the first time a lead is changed to Disqualified</inlineHelpText>
    <label>Disqualification Date</label>
    <type>DateTime</type>
</CustomField>