force-app/main/default/objects/Lead/fields/DoNotSolicit__c.field-meta.xml
<CustomField>
    <fullName>DoNotSolicit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Ecomm: used in back office for company create</description>
    <label>DoNotSolicit</label>
    <type>Checkbox</type>
</CustomField>