force-app/main/default/objects/Lead/fields/Dress_Rehersal_w_Op_Svcs__c.field-meta.xml
<CustomField>
    <fullName>Dress_Rehersal_w_Op_Svcs__c</fullName>
    <defaultValue>250</defaultValue>
    <label>Dress Rehersal w/ Op Svcs.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>