force-app/main/default/objects/Lead/fields/ECommerce_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ECommerce_Account_Number__c</fullName>
    <label>ECommerce Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>