force-app/main/default/objects/Lead/fields/Eloqua_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Lead_Score__c</fullName>
    <inlineHelpText>The letters A-D are a profile grade, with A as best fit; and the numbers are an engagement score, with 1 as most engaged.</inlineHelpText>
    <label>Eloqua Lead Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>