force-app/main/default/objects/Lead/fields/EloquaTaskDate__c.field-meta.xml
<CustomField>
    <fullName>EloquaTaskDate__c</fullName>
    <description>Auto populated based off the latest task created by Eloqua</description>
    <label>Eloqua Task Date</label>
    <type>Date</type>
</CustomField>