force-app/main/default/objects/Lead/fields/Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>COD-1435, Case #872647:  GDPR field with data obtained in Eloqua and passed to Salesforce. Field Mapped to Contact object.</description>
    <label>Email Consent</label>
    <type>Checkbox</type>
</CustomField>