force-app/main/default/objects/Lead/fields/Email_Hard_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Email_Hard_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box will be checked if Eloqua determines the email address listed for this lead creates a hard bounce or unknown recipient.</inlineHelpText>
    <label>Email Hard Bounce</label>
    <type>Checkbox</type>
</CustomField>