force-app/main/default/objects/Lead/fields/Emaildomain__c.field-meta.xml
<CustomField>
    <fullName>Emaildomain__c</fullName>
    <description>Retrieves the lead email domain</description>
    <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emaildomain</label>
    <type>Text</type>
</CustomField>