force-app/main/default/objects/Lead/fields/Employee_Number_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number_Range__c</fullName>
    <description>Marketing (m) only field used to house ranges submitted via webforms. For the upper limit of the range please include a &quot;+&quot; at the end of it. eg 15000+ to signify the value for that selection.</description>
    <label>Employee Number Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Micro (&lt;10)</fullName>
            </value>
            <value>
                <fullName>Small (10-50)</fullName>
            </value>
            <value>
                <fullName>Medium (50-250)</fullName>
            </value>
            <value>
                <fullName>Large (250-3000)</fullName>
            </value>
            <value>
                <fullName>Very Large (3000+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>