force-app/main/default/objects/Lead/fields/Engagement_Rank__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Rank__c</fullName>
    <description>Values pulled from Marketo</description>
    <label>Engagement Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>