force-app/main/default/objects/Lead/fields/Event_Call_Director_ECD__c.field-meta.xml
<CustomField>
    <fullName>Event_Call_Director_ECD__c</fullName>
    <defaultValue>80</defaultValue>
    <label>Event Call Director (ECD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>