force-app/main/default/objects/Lead/fields/Event_Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Event_Dry_Run__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Event Dry Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>