force-app/main/default/objects/Lead/fields/firstKnownChannel_gaSource__c.field-meta.xml
<CustomField>
    <fullName>firstKnownChannel_gaSource__c</fullName>
    <label>firstKnownChannel_gaSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>