force-app/main/default/objects/Lead/fields/firstKnownChannel_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>firstKnownChannel_Timestamp__c</fullName>
    <label>firstKnownChannel_Timestamp</label>
    <type>DateTime</type>
</CustomField>